add: Article 페이지 유저 데이터 표시

--- a/pages/article/[id]/index.module.css
+++ b/pages/article/[id]/index.module.css
@@ -19,7 +19,7 @@
 }
 
 .user {
-  width: 225px;
+  /* width: 225px; */
   display: flex;
   align-items: center;
   gap: 10px;
@@ -37,6 +37,7 @@
 .user > div:last-child {
   font-weight: 400;
   color: #9ca3af;
+  padding-right: 22px;
 }
 
 .likeBox {
