--- a/css/Header.module.css
+++ b/css/Header.module.css
@@ -33,9 +33,9 @@
 
 }
 
-.header1 img {
+/* .header1 img {
     width: 153px;
-}
+} */
 
 .headerText {
     display: flex;
@@ -61,8 +61,8 @@
     /* 밑줄 제거 */
 }
 
-.headerText1{
-    color:#3692FF;
+.headerText1 {
+    color: #3692FF;
 }
 
 .headerText1:hover,
@@ -106,6 +106,43 @@
     height: 20px;
     border: none;
     cursor: pointer;
+}
+
+.nickname {
+    width: 260px;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 21.78px;
+    height: 22px;
+    margin-top: 10px;
+    text-align: left;
+}
+
+.userContainer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.userArea {
+    width: 150px;
+    display: flex;
+    gap: 12px;
+}
+
+.logoutButton {
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 26px;
+    width: 100px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #F3F4F6;
+    cursor: pointer;
+    border-radius: 8px;
+    background-color: #3692FF;
 }
 
 @media screen and (max-width: 1230px) {
