add: Nav바 로그인 인가에 따른 표시 변환

--- a/components/Nav.module.css
+++ b/components/Nav.module.css
@@ -123,13 +123,13 @@
   }
 }
 
-.avatar {
+.userProfile {
   margin-left: 88px;
   width: 40px;
   height: 40px;
 }
 
-.avatar img {
+.avatar {
   width: 40px;
   object-fit: cover;
 }
