--- a/next/styles/globals.css
+++ b/next/styles/globals.css
@@ -70,11 +70,16 @@ Link{
   text-decoration: none;
 }
 
+ul{
+  list-style: none;
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
+
 
 @media(min-width: 768px){
   header {
