--- a/css/articleDetail.module.css
+++ b/css/articleDetail.module.css
@@ -157,7 +157,7 @@
     font-weight: 400;
     line-height: 18px;
     color: #4B5563;
-    text-align: center;
+    text-align: left;
 }
 
 .ArticleDetailCommentUserTime {
